clusters/staging/keycloak-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress-traefik
  namespace: auth
  annotations:
    kubernetes.io/ingress.class: traefik-traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: keycloak-deem-selfsigned
    cert-manager.io/cluster-issuer: keycloak-deem-selfsigned
spec:
  ingressClassName: traefik-traefik
  rules:
    - host: keycloak-deem.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: auth-keycloak
                port:
                  number: 80
  tls:
    - hosts:
        - keycloak-deem.local
      secretName: keycloak-deem-tls
